--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>		
-        <title>Your awesome Youtube search engine</title>
+        <title>Youtube поиск</title>
         <meta charset="UTF-8" />					
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Awesome videos!" />
