--- a/index.html
+++ b/index.html
@@ -1,31 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>		
-        <title>Youtube поиск</title>
-        <meta charset="UTF-8" />					
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Awesome videos!" />
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header>
-            <h1 class="w100 text-center"><a href="index.html">YouTube поиск</a></h1>
-        </header>
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <form action="#">
-                    <p><input type="text" id="search" placeholder="Напечатайте что-нибудь ..." autocomplete="off" class="form-control" /></p>
-                    <p><input type="submit" value="Искать" class="form-control btn btn-primary w100"></p>
-                </form>
-                <div id="results"></div>
-            </div>
-        </div>
-        
-        <!-- scripts -->
-        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-        <script src="js/app.js"></script>
-        <script src="https://apis.google.com/js/client.js?onload=init"></script>
-    </body>
+<!doctype html>
+<html>
+  <head>
+    <title>Search</title>
+  </head>
+  <body>
+    <div id="buttons">
+      <label> 
+      <input id="query" value='cats' type="text"/>
+      <button id="search-button" disabled onclick="search()">Search</button>
+      </label>
+    </div>
+    <div id="search-container">
+    </div>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <!-- <script src="js/auth.js"></script> -->
+    <script src="js/search.js"></script>
+    <!-- <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script> -->
+  </body>
 </html>
-
